csap-core-service/src/main/resources/csap-templates/kubernetes-yaml/kernel-config-using-privileged.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: netmet-startup-configuration
  labels:
    app: startup-script
spec:
  template:
    metadata:
      labels:
        app: startup-script
    spec:
      hostPID: true
      containers:
      - name: netmet-startup-configuration-container
        image: gcr.io/google-containers/startup-script:v1
        securityContext:
          privileged: true
