csap-core-service/src/main/resources/csap-templates/kubernetes-yaml/storage-local.yaml

kind: Pod
apiVersion: v1
metadata:
  name: example-local-pod
spec:
  containers:
  - name: test-pod
    image: gcr.io/google_containers/busybox:1.32.0
    command:
      - "/bin/sh"
    args:
      - "-c"
      - "touch /mnt/SUCCESS ; ls -l ; sleep 500"
    volumeMounts:
      - name: my-pvc
        mountPath: "/mnt"
  restartPolicy: "Never"
  volumes:
    - name: my-pvc
      persistentVolumeClaim:
        claimName: example-local-pv
