csap-core-service/src/main/resources/csap-templates/kubernetes-yaml/storage-simple-pvc.yaml

kind: Pod
apiVersion: v1
metadata:
  name: test-genericpv-pod
spec:
  restartPolicy: "Never"
  containers:
  - name: test-pod
    image: busybox:1.32.0
    command:
      - "/bin/sh"
    args:
      - "-c"
      - "
      ls -al /mnt ; 
      NOW=$(date +'%h-%d-%I-%M-%S') ; 
      touch /mnt/SUCCESS-$NOW ; 
      echo hi >> /mnt/SUCCESS-$NOW ; 
      ls -al /mnt ; 
      sleep 900
      "
    volumeMounts:
      - name: my-generic-pvc
        mountPath: "/mnt"
  volumes:
    - name: my-generic-pvc
      persistentVolumeClaim:
        claimName: test-generic-claim
