csap-core-service/src/main/resources/csap-templates/kubernetes-yaml/kubernetes-operator-csap-app.yaml
#
# https://github.com/coreos/prometheus-operator/tree/master/example/user-guides/getting-started
#


---

apiVersion: v1
kind: Service
metadata:
  name: csap-promethius-service
spec:
  type: NodePort
  ports:
  - name: web
    nodePort: 30900
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    prometheus: csap-promethius
