csap-core-service/src/main/resources/csap-templates/kubernetes-yaml/kubernetes-operator-demo.yaml
#
# https://github.com/coreos/prometheus-operator/tree/master/example/user-guides/getting-started
#


apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example-app-pods
  template:
    metadata:
      labels:
        app: example-app-pods
    spec:
      containers:
      - name: example-app-container
        image: fabxc/instrumented_app
        ports:
        - name: web
          containerPort: 8080

          
---
kind: Service
apiVersion: v1
metadata:
  name: example-app-service
  labels:
    app: example-app-service
spec:
  selector:
    app: example-app-pods
  ports:
  - name: web
    port: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: example-app-promethius-service
spec:
  type: NodePort
  ports:
  - name: web
    nodePort: 30900
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    prometheus: example-app-promethius
