csap-core-service/src/main/resources/csap-templates/kubernetes-yaml/simple-service.yaml
#
#  
#

kind: Service
apiVersion: v1
metadata:
  name: my-simple-service
  namespace: default
spec:
  selector:
    matchForDemoService: my-target
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
