csap-core-service/src/main/resources/csap-templates/kubernetes-yaml/storage-nfs-static.yaml



kind: Deployment

apiVersion: apps/v1

metadata:
  name: nginx-with-nfs-static
  namespace: default
  
  labels:
    csap-deploy-sample: nginx-with-nfs-static-id
    
spec:
  selector:
    matchLabels:
      csap-deploy-sample: nginx-with-nfs-static-id
      
  replicas: 1
  
  template:
  
    metadata:
      name: "nginx-demo-pod-template"
      labels:
        csap-deploy-sample: nginx-with-nfs-static-id
        matchForDemoService: nginx-with-nfs-static-target

      annotations:     
        "sample-1": "value-1" 
        
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: nginx-container
        image: nginx:latest
        
        ports:
        - containerPort: 80
        
        command:
          - "/bin/sh"
          
        args:
          - "-c"
          - "
          htmlFolder=/usr/share/nginx/html;
          ls -al $htmlFolder ; NOW=$(date +'%h-%d-%I-%M-%S'); 
          
          touch $htmlFolder/SUCCESS-$NOW; 
          echo hi >> $htmlFolder/SUCCESS-$NOW ; 
          
          echo creating $htmlFolder/index.html;
          echo hi there from a nginx-with-nfs-static at $NOW >> $htmlFolder/index.html; 
          
          nginx -g 'daemon off;'
          "
          
        readinessProbe:
          initialDelaySeconds: 3
          timeoutSeconds: 3
          periodSeconds: 3
          failureThreshold: 1
          httpGet:
            path: /
            port: 80
            
        livenessProbe:
          initialDelaySeconds: 3
          timeoutSeconds: 3
          periodSeconds: 3
          failureThreshold: 1
          httpGet:
            path: /
            port: 80
          
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: my-nfs-pvc
          
      volumes:
      - name: my-nfs-pvc
        persistentVolumeClaim: 
          claimName: test-nfs-static-pvc

        
---

kind: Service
apiVersion: v1
metadata:
  name: nginx-with-nfs-static-service
  namespace: default
spec:
  type: NodePort # defaults to clusterip
  selector:
    matchForDemoService: nginx-with-nfs-static-target
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
