csap-core-service/src/main/resources/csap-templates/kubernetes-yaml/nginx-route-demo.yaml
#
# nginx with /demo path rewrite
# - https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/rewrite/README.md
# - https://github.com/kubernetes/ingress-nginx/blob/master/docs/user-guide/nginx-configuration/annotations.md
#


kind: Deployment

apiVersion: apps/v1

metadata:
  name: nginx-demo
  namespace: default
  labels:
    run: nginx-demo-id
    
spec:
  selector:
    matchLabels:
      run: nginx-demo-id
      
  replicas: 1
  
  template:
  
    metadata:
      name: "nginx-demo-pod-template"
      labels:
        run: nginx-demo-id
        matchForDemoService: demo-target

      annotations:     
        "sample-1": "value-1" 
        
    spec:
      containers:
      - name: nginx-container
        image: nginx:latest
        ports:
        - containerPort: 80
        readinessProbe:
          initialDelaySeconds: 3
          timeoutSeconds: 3
          periodSeconds: 3
          httpGet:
            path: /
            port: 80
            
        livenessProbe:
          initialDelaySeconds: 3
          timeoutSeconds: 3
          periodSeconds: 3
          failureThreshold: 10
          httpGet:
            path: /
            port: 80
        
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-demo-service
  namespace: default
spec:
  #type: NodePort # defaults to clusterip
  selector:
    matchForDemoService: demo-target
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:

  name: nginx-demo-ingress
  namespace: default
  
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
  
spec:
  rules:
  - host: YOURHOST.lab.sensus.net
    http:
      paths:
        - path: /demo-route-1/?(.*)
          pathType: ImplementationSpecific
          backend: 
            service:
              name: nginx-demo-service
              port: 
                number: 80
